--- a/src/website/main/templates/base.html
+++ b/src/website/main/templates/base.html
@@ -3,10 +3,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Projet QIX</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'assets/css/base.css' %}" />
+    <title>Projet QIESX</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock content %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div class="row justify-content-center">        
+                    <div class="col-md-8">
+                        <h1 class="mt 2">Qiesx</h1>
+                    </div>
+                    <div class="col-md-2">
+                        {% if user %}
+                        <span class="align-middle"><i class="far fa-user"></i> {{ user }}</span>
+                        {% endif %}
+                    </div>
+                </div>
+                <hr class="mt-0 mb-4">
+                {% block content %}
+                {% endblock content %}
+            </div>
+        </div>
+    </div>
+
 </body>
+<script src="https://kit.fontawesome.com/c81e4d4772.js" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
