--- a/src/website/main/templates/main/login.html
+++ b/src/website/main/templates/main/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
     <h1>Se connecter</h1>
     {% if error %}
@@ -10,8 +11,8 @@
     {% else %}
         <form method="post" action=".">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Se connecter" />
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
     {% endif %}
 {% endblock content %}
