Added a join game url as well as a start game url Model now has an Game object from game_logic

--- a/src/website/main/templates/base.html
+++ b/src/website/main/templates/base.html
@@ -17,8 +17,10 @@
                         <h1 class="mt 2">Qiesx</h1>
                     </div>
                     <div class="col-md-2">
-                        {% if user %}
+                        {% if user.is_active %}
                         <span class="align-middle"><i class="far fa-user"></i> {{ user }}</span>
+                        {% else %}
+                        <span class="align-middle"><a href="/login">Login</a></span>
                         {% endif %}
                     </div>
                 </div>
