--- a/src/website/main/templates/main/login.html
+++ b/src/website/main/templates/main/login.html
@@ -8,6 +8,7 @@
 
     {% if user.is_authenticated %}
         Vous êtes connecté, {{ user.username }} !
+        <script> window.location.href = "/";</script>
     {% else %}
         <form method="post" action=".">
             {% csrf_token %}
