updates and moves on website

--- a/src/website/main/templates/main/game.html
+++ b/src/website/main/templates/main/game.html
@@ -31,7 +31,7 @@
                 <li>Opennant : {{ game.player_2.username }}</li>
             </ul>
         </div>
-        <p>Board is {{ game.board }}</p>
+        <p id="board" value="{{game.board}}">Board is {{ game.board }}</p>
         <div id="canevas">
 
         </div>
