--- a/src/website/main/templates/main/game.html
+++ b/src/website/main/templates/main/game.html
@@ -1,7 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Test Ai</title>
+{% extends 'base.html' %}
+    {% block head %}
         <style>
             table{
                 border: 1px solid black;
@@ -19,9 +17,9 @@
                 background-color: red;
             }
         </style>
-    </head>
-    <body>
-        {% csrf_token %}
+    {% endblock head %}
+    {% block content %}
+                {% csrf_token %}
         <p id="game_id" value="{{ game_id }}">Your game id is {{ game.id }}</p>
         <p>Game state is {{ game.game_state }}</p>
         <div>
@@ -31,16 +29,17 @@
                 <li>Opennant : {{ game.player_2.username }}</li>
             </ul>
         </div>
+        
+            <a href="/start_game/{{ game.id }}/" class="btn btn-primary">Start game</a>
+        
         <p id="board" value="{{game.board}}">Board is {{ game.board }}</p>
         <div id="canevas">
 
         </div>
-        <p id="game_state"></p>
-    </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     {% load static %}
     <script type="text/javascript" src="{% static 'assets/js/jscode.js' %}"></script>
     <script>
         main();
     </script>
-</html>
+    {% endblock content %}
