--- a/src/website/main/templates/base.html
+++ b/src/website/main/templates/base.html
@@ -7,23 +7,48 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'assets/css/base.css' %}" />
     <title>Projet QIESX</title>
+    {% block head %}
+    {% endblock head %}
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Qiesx</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/create_game">Create a game</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/list_games">List games</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            {% if user.is_active %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ user.username }}
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Profil</a>
+                            <a class="dropdown-item" href="#">My games</a>
+                        <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/logout">Logout</a>
+                        </div>
+                    </li>
+                </ul>
+            {% else %}
+                <span class="align-middle"><a href="/login">Login</a></span>
+            {% endif %}
+        </div>
+    </nav>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-8">
-                <div class="row justify-content-center">        
-                    <div class="col-md-8">
-                        <h1 class="mt 2">Qiesx</h1>
-                    </div>
-                    <div class="col-md-2">
-                        {% if user.is_active %}
-                        <span class="align-middle"><i class="far fa-user"></i> {{ user }}</span>
-                        {% else %}
-                        <span class="align-middle"><a href="/login">Login</a></span>
-                        {% endif %}
-                    </div>
-                </div>
                 <hr class="mt-0 mb-4">
                 {% block content %}
                 {% endblock content %}
@@ -33,5 +58,9 @@
 
 </body>
 <script src="https://kit.fontawesome.com/c81e4d4772.js" crossorigin="anonymous"></script>
+<script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
