adding sign up forms and requierments

--- a/src/website/main/templates/main/game.html
+++ b/src/website/main/templates/main/game.html
@@ -16,6 +16,12 @@
             .rouge{
                 background-color: red;
             }
+            .bleu_player{
+                background-color: rgb(66, 135, 245)
+            }
+            .rouge_player{
+                background-color: rgb(99, 13, 13)
+            }
         </style>
     {% endblock head %}
     {% block content %}
