--- a/src/website/main/templates/main/signup.html
+++ b/src/website/main/templates/main/signup.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
-{% block container %}
+{% load crispy_forms_tags %}
+{% block content %}
         <form method="post" action=".">
             {% csrf_token %}
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Sign up</button>
         </form>
-{% endblock container %}
+{% endblock content %}
