Warning for http connections

--- a/src/website/main/templates/main/homepage.html
+++ b/src/website/main/templates/main/homepage.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Bienvenue sur QIESX!</h1>
+<div class="alert alert-danger" role="alert">
+    <h2>ATTENTION! Ce site est héberger en http, veuillez utilisé des mots de passe nuls et propre au site, ou bien vous assurer que votre connexion soit sécurisée</h2>
+</div>
 <p>
     Qiesx est un jeu de conquête de territoire fortement inspiré de Qix!<br />
     Il a été créer dans le cadre d'un projet de développement d'intelligence artificelle par 3 étudiant de l'Henallux.<br />
