--- a/src/website/main/templates/main/homepage.html
+++ b/src/website/main/templates/main/homepage.html
@@ -9,7 +9,7 @@
     Il a été créer dans le cadre d'un projet de développement d'intelligence artificelle par 3 étudiant de l'Henallux.<br />
     Franchement c'est stylé lache un pouce vert
 </p>
-<button type="button" class="btn btn-default btn-sm">
+<button type="button" class="btn btn-default btn-sm" style="color: green;">
     <i class="fas fa-thumbs-up"></i>
 </button>
 {% endblock content %}
